c3prj1_deck/grade.txt
Grading at Mon Aug 12 05:13:22 UTC 2019
Compiling deck.c
deck.c: In function ‘add_card_to’:
deck.c:68:30: error: expected expression before ‘card_t’
  card_t tmp = malloc(sizeof(*card_t));
                              ^
deck.c:75:7: error: incompatible type for argument 1 of ‘free’
  free(tmp);
       ^
In file included from deck.c:2:0:
/usr/include/stdlib.h:483:13: note: expected ‘void *’ but argument is of type ‘card_t {aka struct card_tag}’
 extern void free (void *__ptr) __THROW;
             ^
Could not compile your deck.c!

Overall Grade: FAILED
